--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,52 +1,620 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-.logo{
-    margin-top: 31.68px;
-    margin-left: 20.12px;
+
+
+.logo {
+  margin-top: 20px;
+  margin-left: 20px;
 }
+
 .search-container {
-    position: relative;
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 28%;
+}
+
+.input-search::placeholder {
+  font-size: 14px;
+  line-height: 24px;
+}
+
+.input-search {
+  padding: 10px 10px 10px 20px;
+  font-size: 16px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  height: 25px;
+  width: 100%;
+  max-width: 400px;
+  font-family: 'Poppins', sans-serif;
+}
+
+.search-icon {
+  position: absolute;
+  right: 20px;
+  width: 20px;
+  height: 20px;
+}
+
+.search-container1 {
+  position: relative;
     display: flex;
     align-items: center;
-    margin-left: 240.56px;
-  }
-  .input-search::placeholder {
-    font-size: 14px; 
-    line-height: 24px;
-  }
-  
-  .input-search {
-    padding: 10px 10px 10px 20px;
-    font-size: 16px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    height: 25px;
-    width: 403.69px;
-    font-family: poppins;
-  }
-  
-  .search-icon {
-    position: absolute;
-    right: 20px;
-    width: 20px;
-    height: 20px;
+    margin-left: 290px;
+    width: 230px;
+    margin-right: auto;
+}
+
+.input-search1::placeholder {
+  font-size: 14px;
+  line-height: 24px;
+}
+
+.input-search1 {
+  padding: 3px 7px 4px 7px;
+  font-size: 16px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  height: 25px;
+  width: 100%;
+  box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+  max-width: 400px;
+  margin-top: 13px;
+  font-family: 'Poppins';
+}
+
+.search-icon1 {
+  position: absolute;
+  right: 19px;
+  width: 15px;
+  height: 15px;
+  top: 22px;
+}
+
+ .container-nav {
+  display: flex;
+  align-items: center;
+  height: 125px;
+  padding: 0 20px;
+  gap: 195px;
+  box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+} 
+
+.icon {
+  display: flex;
+  gap: 60px;
+}
+
+.icon img {
+  width: 18px;
+  height: auto;
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    height: auto;
+    padding: 20px;
   }
 
-.container{
-    display: flex;
-    height: 125px;
+  .search-container {
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+    max-width: none;
+    margin-bottom: 20px;
+  }
+
+  .icon {
+    justify-content: center;
+    gap: 10px;
+  }
+}
+
+@media (max-width: 480px) {
+  .search-container {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  .search-icon {
+    position: relative;
+    right: auto;
+    margin-top: 10px;
+    align-self: flex-end;
+  }
+}
+
+
+.container {
+  display: grid;
+  grid-template-areas:
+  "navbar navbar navbar navbar"
+  "left-column top-left top-right top-right"
+  "left-column middle-row-1 middle-row-1 right-column"
+  "left-column middle-row-2 middle-row-2 right-column"
+  "left-column bottom-row bottom-row right-column";
+  grid-template-columns: 0.4fr 1fr 1fr 1fr;
+  grid-template-rows: auto repeat(4, minmax(100px, auto));
+  gap: 10px;
+  width: 100%;
+}
+
+.navbar {
+  grid-area: navbar;
+  text-align: center;
+}
+
+.left-column {
+  width: 125px;
+  grid-area: left-column;
+  border-radius: 0px 40px 0px 0px;
+  box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+  margin-top: 100px;
+}
+
+.top-left {
+  grid-area: top-left;
+}
+
+.top-right {
+  grid-area: top-right;
+}
+
+.middle-row-1 {
+  grid-area: middle-row-1;
+    height: 383px;
+    box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    margin-left: 35px;
+}
+
+.middle-row-2 {
+  grid-area: middle-row-2;
+  height: 383px;
+  box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  margin-left: 35px;
+}
+
+.bottom-row {
+  grid-area: bottom-row;
+  height: 383px;
+  box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  margin-left: 35px;
+}
+
+.right-column {
+  grid-area: right-column;
+  background-color: #8ab17d;
+  padding: 20px;
+}
+
+/* Media Queries for Responsiveness */
+@media (max-width: 768px) {
+  .container {
+      grid-template-areas: 
+          "navbar navbar"
+          "top-left top-right"
+          "left-column right-column"
+          "middle-row-1 middle-row-1"
+          "middle-row-2 middle-row-2"
+          "bottom-row bottom-row";
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: auto;
+  }
+
+  .left-column, .right-column {
+      grid-column: span 2;
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+      grid-template-areas: 
+          "navbar"
+          "top-left"
+          "top-right"
+          "left-column"
+          "middle-row-1"
+          "middle-row-2"
+          "bottom-row"
+          "right-column";
+      grid-template-columns: 1fr;
+      grid-template-rows: auto;
+  }
+
+  .left-column, .right-column {
+      grid-column: span 1;
+  }
+}
+.container-left{
+  width:125px;
+  height:2466px;
+  margin-top:100px;
+  border-radius: 0px 40px 0px 0px;
+  box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+
+}
+.icon-left{
+  display: grid;
+  gap: 61px;
+  margin-left: 38px;
+}
+.icon-left img{
+  width: 35px;
+  height: 35px;
+}
+.hr-employee-css{
+  height: 50px;
+  margin-top: 95px;
+  color: #3E3E3E;
+  margin-left: 35px;
+  font-family: 'Poppins';
+  font-size: 26px;
+  font-weight: 500;
+}
+.manage-sys{
+  height: 50px;
+  color: #3E3E3E;
+  margin-left: 35px;
+  font-family: 'Poppins';
+  font-size: 16px;
+  font-weight: 400;
+}
+.app-menu{
+  height: 383px;
+  box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  margin-left: 35px;
+}
+.info-menu{
+  display: flex;
+}
+.app-info{
+  font-family: 'Poppins';
+  width: 198px;
+  margin-left: 20px;
+  margin-top: 20px;
+  font-weight: 500;
+}
+.bar-text{
+  gap: 20px;
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
+}
+.square1{
+  width: 20px;
+  height: 20px;
+  border-radius: 3px;
+  background-color: #277ACC;
+}
+.received-txt{
+  font-family: 'Poppins';
+  font-size: 14px;
+  color: #000;
+  font-weight: 400;
+}
+.square2{
+  width: 20px;
+  height: 20px;
+  opacity: 0.7;
+  border-radius: 3px;
+  background-color: #002B55;
+}
+.processed-txt{
+  font-family: 'Poppins';
+  font-size: 14px;
+  color: #000;
+  font-weight: 400;
+}
+.month-div{
+  margin-left: 155px;
+  margin-top: 15px;
+}
+
+.chart-container {
+  display: flex;
+  align-items: flex-end;
+  height: 282px; /* Adjust height as needed */
+}
+
+.y-axis {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 84%;
+  margin-right: 8px;
+  margin-left: 20px;
+  font-family: 'Poppins';
+    font-size: 11px;
+    color: #091316;
+}
+.vector{
+  margin-left: -621px;
+  z-index: 2;
+  margin-bottom: 52px;
+}
+.num1-text{
+  font-family: 'Poppins';
+  color: #fff;
+  margin-top: 27px;
+  margin-left: 38px;
+  font-size: 53px;
+  font-weight: 600;
+}
+.new-text{
+  font-family: 'Poppins';
+  color: #fff;
+  margin-top: 27px;
+  margin-left: 38px;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.y-label {
+  text-align: right;
+}
+
+.bar-chart {
+  border-right: 1px solid transparent;
+  display: flex;
+  align-items: flex-end;
+  width: 620px;
+  height: 90%;
+  border-left: 1px solid #000;
+  background-color: #fff;
+  border-bottom: 1px solid #000;
+  position: relative;
+  font-family: 'Poppins';
+  font-size: 10px;
+  color: #091316;
+}
+
+.bar {
+  height: 70%;
+  width: 80px;
+  background-color: #277ACC;
+  margin: 0 10px;
+  transition: height 0.3s ease;
+  position: relative;
+  border-radius: 6px;
+  border-bottom-right-radius: unset;
+  border-bottom-left-radius: unset;
+}
+
+.bar:hover {
+  background: linear-gradient(to bottom, #0A66C2 0%, #3E8EDC 74%);
+}
+
+.bar::after {
+  content: attr(data-label);
+  position: absolute;
+  bottom: -20px; /* Position label below bar */
+  left: 50%;
+  transform: translateX(-50%);
+  color: #333;
+  text-align: center;
+}
+.month{
+  font-family: 'Poppins';
+  padding: 2px 5px;
+  margin-right: 10px;
+  border-radius: 3px;
+  border: 1px solid #0A66C2;
+}
+.line{
+  border: 1px solid #D6D6D6;
+  width: 96%;
+  margin-left: 15px;
+  margin-top: 10px;
+}
+.blue-box {
+  display: flex;
+  gap: 61px;
+  height: 383px;
+  width: 605px;
+  background: linear-gradient(#0A66C2, #5994CE);
+  margin-top: 195px;
+  box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  margin-left: 35px;
+}
+.icon-2{   
+  background-color: #fff;
+  height: 83px;
+  width: 65px;
+  border-radius: 3px;
+  padding: 19px;
+  margin-left: 38px;
+  margin-top: 40px;
+}
+.meet-info,.post-info{
+  font-size: 22px;
+  font-family: 'Poppins';
+  font-weight: 500;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+.can-info{
+  font-size: 18px;
+  font-family: 'Poppins';
+  font-weight: 500;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+.line3{
+  border-bottom: 1px solid #3e3e3e;
+  width: 985px;
+  margin-left: 7px;
+  margin-top: 3px;
+}
+.jobs-menu{
+  margin-top: 20px;
+  gap: 60px;
+  margin-left: 20px;
+  color: #3E3E3E;
+  font-family: 'Poppins';
+  font-size: 14px;
+  display: flex;
+}
+.posted-menu{
+  gap: 57px;
+  display: inline-flex;
+  align-items: center;
+}
+.can-menu{
+  gap: 50px;
+  display: inline-flex;
+  align-items: center;
+}
+
+
+.filter{
+  margin-left: 12px;
+    width: 15px;
+}
+.filter-txt{
+  font-family: 'Poppins';
+  color: #000000;
+  font-size: 12px;
+}
+.filter-container1{
+  border-radius: 4px;
+  display: inline-flex;
+  gap: 10px;
+  height: 35px;
+  margin-top: 13px;
+  width: 101px;
+  box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+  align-items: center;
+}
+.input-search1::placeholder {
+  font-size: 12px;
+}
+.view-text{
+  margin-top: 15px;
+    font-size: 13px;
+    color: #0A66C2;
+    text-transform: capitalize;
+    font-family: 'Poppins';
+    font-weight: 500;
+    border-bottom: 1px solid #0A66C2;
+}
+.job-portal1{
+  margin-left: 22px;
+    margin-top: 26px;
+    width: 228px;
+    height: 230.46px;
+    border-radius: 3px;
     box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
 }
-.icon{
-    gap: 70px;
-    margin-left: 105px;
-    display: flex;
+.menu1-job{
+  display: flex;
+  gap: 17px;
+  align-items: center;
+  padding: 10px;
 }
-.icon img{
-    width: 18.2px;
-    height: auto;
+.python-txt{
+  font-size: 11px;
+  font-family: 'Poppins';
+  color: #091316;
 }
-.inputsearch{
-    height: 25px;
-    width: 403.69px;
-    font-family: poppins;
+.num-text{
+  font-size: 12px;
+    font-family: 'Poppins';
+    color: #091316;
+}
+.line1-job{
+  border: 1px solid #D6D6D6;
+  margin-top: 0px;
+  width: 202px;
+  margin-left: 8px;
+}
+.top-menu{
+  text-align: center;
+    line-height: 38px;
+}
+.role-text{
+  font-family: 'Poppins';
+  color: #3E3E3E;
+  font-size: 12px;
+  margin-top: 12px;
+}
+.div-txt{
+  color: #0A66C2;
+    width: 50px;
+    height: 40px;
+    background: #D9E4EF;
+    margin-left: 80px;
+}
+.total-app{
+  font-family: 'Poppins';
+  color: #3E3E3E;
+  font-size: 12px;
+  margin-bottom: 12px;
+}
+.line3-bot{
+  border: 1px solid #D6D6D6;
+  margin-top: 0px;
+  width: 202px;
+  margin-left: 8px;
+}
+.month-text{
+  font-family: 'Poppins';
+  display: flex;
+  margin-top: 15px;
+  align-items: center;
+  gap: 11px;
+  margin-left: 10px;
+  font-weight: 400;
+  font-size: 11px;
+}
+.iconjob img{
+  width:18px;
+}
+.arrowup img{
+  width: 15px;
+  height: 12px;
+}
+.view-menu{
+  margin-top: -105px;
+    margin-left: 456px;
+}
+.view-txt{
+  width: 100px;
+  padding: 15px 15px 15px 15px;
+  font-family: 'Poppins';
+  border: none;
+  font-weight: 500;
+  border-radius: 4px;
+  color: #000;
+  text-transform: uppercase;
+}
+.can-table{
+  margin-top: 29px;
+  border-radius: 5px;
+  font-family: 'Poppins';
+  font-size: 13px;
+  color: #3E3E3E;
+  width: 96%;
+  margin-left: 20px;
+  font-weight: 500;
+  background: #F5F5F5;
+}
+td{
+  font-weight: 400;
+  font-size: 11px;
+  text-align: center;
+}
+.active-cls{
+  background-color: #FFF9EC;
+    padding: 8px;
+    width: 40px;
+    font-family: 'Poppins';
+    border: none;
+    font-size: 11px;
+    color: #F5C961;
 }
