--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,1123 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+.middle-row-1 {
+  grid-area: middle-row-1;
+  height: 453px;
+  margin-top: 45px;
+  box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 35px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.top-section {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.meet-info {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.line2-1 {
+  border-bottom: 1px solid #D6D6D6;
+  width: 940px;
+  margin-left: 7px;
+  margin-top: 3px;
+}
+
+.bottom-section {
+  display: flex;
+  overflow-x: auto;
+  margin-left: 15px;
+  padding-bottom: 15px;
+  width: 97.5%;
+}
+
+.bottom-section::-webkit-scrollbar {
+  height: 10px;
+}
+
+.bottom-section::-webkit-scrollbar-track {
+  background: #D9D9D9;
+  border-radius: 5px;
+}
+
+.bottom-section::-webkit-scrollbar-thumb {
+  background-color: #0A66C2; 
+  border-radius: 5px; 
+  border: 2px solid #D9D9D9; 
+  width: 5px; 
+  min-width: 5px;
+}
+
+.left-side {
+  display: flex;
+  flex-direction: row; 
+  gap: 20px;
+}
+
+.prof-menu {
+  display: flex;
+  border: 1px solid #D6D6D6;
+  min-width: 600px; 
+}
+
+.menu1-prof {
+  border-radius: 4px;
+  color: #091316;
+  width: 40%;
+  border-right: 1px solid #D6D6D6;
+  line-height: 30px;
+  font-family: 'Poppins';
+  text-align: center;
+  font-size: 15px;
+}
+
+.profile-boy {
+  padding: 35px 0px 10px 0px;
+}
+
+.icons-menu-bar {
+  margin-top: 24px;
+  display: inline-flex;
+  gap: 20px;
+  font-family: 'Poppins';
+  font-size: 12px;
+  width: 100%;
+  align-items: center;
+  text-align: center;
+  border-top: 1px solid #D6D6D6;
+  color: #0A66C2;
+}
+
+.calen-menu {
+  margin-top: 10px;
+  margin-left: 30px;
+}
+
+.clock-menu {
+  margin-top: 10px;
+}
+
+.right-side-data {
+  flex-grow: 1;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.info-table {
+  width: 100%;
+  border-collapse: collapse;
+  font-family: 'Poppins';
+  font-size: 13px;
+  color: #3E3E3E;
+}
+
+.info-table td {
+  padding: 10px;
+  border-bottom: 1px solid #D6D6D6;
+}
+
+.border-grey td {
+  border-bottom: 1px solid #D6D6D6;
+  border-right: 1px solid #D6D6D6;
+}
+
+.btn-menu {
+  margin-top: 30px;
+  display: flex;
+  gap: 65px;
+  margin-left: 23px;
+}
+
+.resh-txt {
+  border: 1px solid #0A66C2;
+  height: 45px;
+  font-weight: 500;
+  color: #0A66C2;
+  border-radius: 5px;
+  font-family: 'Poppins';
+  background: #fff;
+}
+
+.join-txt {
+  border: 1px solid #0A66C2;
+  height: 45px;
+  font-weight: 500;
+  color: #fff;
+  border-radius: 5px;
+  font-family: 'Poppins';
+  background: #0A66C2;
+}
+
+.scroll-bar {
+  margin-top: 14px;
+  background: #D9D9D9;
+  width: 925px;
+  height: 10px;
+  margin-left: 15px;
+  border-radius: 5px;
+}
+
+.logo {
+margin-top: 20px;
+margin-left: 20px;
+}
+
+.search-container {
+position: relative;
+display: flex;
+align-items: center;
+width: 28%;
+}
+
+.input-search::placeholder {
+font-size: 14px;
+line-height: 24px;
+}
+
+.input-search {
+padding: 10px 10px 10px 20px;
+font-size: 16px;
+border-radius: 4px;
+border: 1px solid #ccc;
+height: 25px;
+width: 100%;
+max-width: 400px;
+font-family: 'Poppins', sans-serif;
+}
+
+.search-icon {
+position: absolute;
+right: 20px;
+width: 20px;
+height: 20px;
+}
+
+.search-container1 {
+position: relative;
+display: flex;
+align-items: center;
+margin-left: 290px;
+width: 230px;
+margin-right: auto;
+}
+
+.input-search1::placeholder {
+font-size: 14px;
+line-height: 24px;
+}
+
+.input-search1 {
+padding: 3px 7px 4px 7px;
+font-size: 16px;
+border-radius: 4px;
+border: 1px solid #ccc;
+height: 25px;
+width: 100%;
+box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+max-width: 400px;
+margin-top: 13px;
+font-family: 'Poppins';
+}
+
+.search-icon1 {
+position: absolute;
+right: 19px;
+width: 15px;
+height: 15px;
+top: 22px;
+}
+
+.container-nav {
+display: flex;
+align-items: center;
+height: 125px;
+padding: 0 20px;
+gap: 195px;
+box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+} 
+
+.icon {
+display: flex;
+gap: 60px;
+}
+
+.icon img {
+width: 18px;
+height: auto;
+}
+
+@media (max-width: 768px) {
+.container {
+flex-direction: column;
+height: auto;
+padding: 20px;
+}
+
+.search-container {
+margin-left: 0;
+margin-right: 0;
+width: 100%;
+max-width: none;
+margin-bottom: 20px;
+}
+
+.icon {
+justify-content: center;
+gap: 10px;
+}
+}
+
+@media (max-width: 480px) {
+.search-container {
+flex-direction: column;
+align-items: stretch;
+}
+
+.search-icon {
+position: relative;
+right: auto;
+margin-top: 10px;
+align-self: flex-end;
+}
+}
+
+
+.container {
+display: grid;
+grid-template-areas:
+"navbar navbar navbar navbar"
+"left-column top-left top-right top-right"
+"left-column middle-row-1 middle-row-1 right-column"
+"left-column middle-row-2 middle-row-2 right-column"
+"left-column bottom-row bottom-row right-column";
+grid-template-columns: 0.4fr 1fr 1fr 1.5fr;
+grid-template-rows: auto repeat(3, minmax(auto, auto));
+gap: 10px;
+width: 100%;
+}
+
+.navbar {
+grid-area: navbar;
+text-align: center;
+}
+
+.left-column {
+width: 125px;
+grid-area: left-column;
+border-radius: 0px 40px 0px 0px;
+box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+margin-top: 100px;
+}
+
+.top-left {
+grid-area: top-left;
+}
+.month-style{
+padding: 0;
+margin:6px;
+}
+.top-right {
+grid-area: top-right;
+}
+.cal-main-div{
+display: flex;
+gap: 105px;
+}
+.leftarrow-div{
+height: 20px;
+margin-top: 20px;
+margin-left: 10px;
+}
+.leftarrow{
+width: 9px;
+height: auto;
+}
+.rightarrow-div{
+height: 20px;
+margin-top: 20px;
+margin-left: 0px;
+}
+.rightarrow{
+width: 7px;
+height: auto;
+}
+.add-sty{
+border-radius: 40px;
+width: 20px;
+background: #0A66C2;
+height: 20px;
+/* padding: 2px; */
+color: #fff;
+}
+.date-sty{
+background: #0B74AD26;
+text-align: center;
+color: #0B74AD;
+border-radius: 5px;
+height: 50px;
+}
+.dates-add{
+width: 50px;
+margin-top: 3px;
+}
+.mon-sty{
+line-height: 14px;
+}
+/* .middle-row-1 {
+grid-area: middle-row-1;
+height: 453px;
+margin-top: 45px;
+box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+border-radius: 10px;
+display: flex;
+flex-direction: column;
+margin-left: 35px;
+} */
+
+
+.middle-row-2 {
+grid-area: middle-row-2;
+height: 383px;
+box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+border-radius: 10px;
+margin-left: 35px;
+}
+
+.bottom-row {
+grid-area: bottom-row;
+height: 693px;
+box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+border-radius: 10px;
+margin-left: 35px;
+
+}
+
+.right-column {
+grid-area: right-column;
+padding: 20px;
+}
+
+/* Media Queries for Responsiveness */
+@media (max-width: 768px) {
+.container {
+grid-template-areas: 
+"navbar navbar"
+"top-left top-right"
+"left-column right-column"
+"middle-row-1 middle-row-1"
+"middle-row-2 middle-row-2"
+"bottom-row bottom-row";
+grid-template-columns: 1fr 1fr;
+grid-template-rows: auto;
+}
+
+.left-column, .right-column {
+grid-column: span 2;
+}
+}
+
+@media (max-width: 480px) {
+.container {
+grid-template-areas: 
+"navbar"
+"top-left"
+"top-right"
+"left-column"
+"middle-row-1"
+"middle-row-2"
+"bottom-row"
+"right-column";
+grid-template-columns: 1fr;
+grid-template-rows: auto;
+}
+
+.left-column, .right-column {
+grid-column: span 1;
+}
+}
+.container-left{
+width:125px;
+height:2466px;
+margin-top:100px;
+border-radius: 0px 40px 0px 0px;
+box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+
+}
+.icon-left{
+display: grid;
+gap: 61px;
+margin-left: 38px;
+}
+.icon-left img{
+width: 35px;
+height: 35px;
+}
+.hr-employee-css{
+height: 50px;
+margin-top: 95px;
+color: #3E3E3E;
+margin-left: 35px;
+font-family: 'Poppins';
+font-size: 26px;
+font-weight: 500;
+}
+.manage-sys{
+height: 50px;
+color: #3E3E3E;
+margin-left: 35px;
+font-family: 'Poppins';
+font-size: 16px;
+font-weight: 400;
+}
+.app-menu{
+height: 383px;
+box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+border-radius: 10px;
+margin-left: 35px;
+}
+.info-menu{
+display: flex;
+}
+.app-info{
+font-family: 'Poppins';
+width: 198px;
+margin-left: 20px;
+margin-top: 20px;
+font-weight: 500;
+}
+.bar-text{
+gap: 20px;
+margin-top: 15px;
+display: flex;
+align-items: center;
+}
+.square1{
+width: 20px;
+height: 20px;
+border-radius: 3px;
+background-color: #277ACC;
+}
+.received-txt{
+font-family: 'Poppins';
+font-size: 14px;
+color: #000;
+font-weight: 400;
+}
+.square2{
+width: 20px;
+height: 20px;
+opacity: 0.7;
+border-radius: 3px;
+background-color: #002B55;
+}
+.processed-txt{
+font-family: 'Poppins';
+font-size: 14px;
+color: #000;
+font-weight: 400;
+}
+.month-div{
+margin-left: 155px;
+margin-top: 15px;
+}
+
+.chart-container {
+display: flex;
+align-items: flex-end;
+height: 282px; 
+}
+
+.y-axis {
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+height: 84%;
+margin-right: 8px;
+margin-left: 20px;
+font-family: 'Poppins';
+font-size: 11px;
+color: #091316;
+}
+.vector{
+margin-left: -621px;
+z-index: 2;
+margin-bottom: 52px;
+}
+.num1-text{
+font-family: 'Poppins';
+color: #fff;
+margin-top: 27px;
+margin-left: 38px;
+font-size: 53px;
+font-weight: 600;
+}
+.new-text{
+font-family: 'Poppins';
+color: #fff;
+margin-top: 27px;
+margin-left: 38px;
+font-size: 14px;
+font-weight: 500;
+}
+
+.y-label {
+text-align: right;
+}
+
+.bar-chart {
+border-right: 1px solid transparent;
+display: flex;
+align-items: flex-end;
+width: 620px;
+height: 90%;
+border-left: 1px solid #000;
+background-color: #fff;
+border-bottom: 1px solid #000;
+position: relative;
+font-family: 'Poppins';
+font-size: 10px;
+color: #091316;
+}
+
+.bar {
+  height: 70%;
+  width: 80px;
+  background-color: #277ACC;
+  margin: 0 10px;
+  transition: height 0.3s ease;
+  position: relative;
+  border-radius: 6px;
+  border-bottom-right-radius: unset;
+  border-bottom-left-radius: unset;
+}
+
+.bar:hover {
+  background: linear-gradient(to bottom, #0A66C2 0%, #3E8EDC 74%);
+}
+
+.bar::after {
+  content: attr(data-label);
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #333;
+  text-align: center;
+}
+.month{
+font-family: 'Poppins';
+padding: 2px 5px;
+margin-right: 10px;
+border-radius: 3px;
+border: 1px solid #0A66C2;
+}
+.line{
+border: 1px solid #D6D6D6;
+width: 96%;
+margin-left: 15px;
+margin-top: 10px;
+}
+.blue-box {
+display: flex;
+gap: 61px;
+height: 383px;
+width: 605px;
+background: linear-gradient(#0A66C2, #5994CE);
+margin-top: 195px;
+box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+border-radius: 10px;
+margin-left: 35px;
+}
+.icon-2{   
+background-color: #fff;
+height: 83px;
+width: 65px;
+border-radius: 3px;
+padding: 19px;
+margin-left: 38px;
+margin-top: 40px;
+}
+.meet-info,.post-info{
+font-size: 22px;
+font-family: 'Poppins';
+font-weight: 500;
+margin-left: 20px;
+margin-top: 20px;
+}
+.can-info{
+font-size: 18px;
+font-family: 'Poppins';
+font-weight: 500;
+margin-left: 20px;
+margin-top: 20px;
+}
+.line3{
+border-bottom: 1px solid #3e3e3e;
+width: 932px;
+margin-left: 7px;
+margin-top: 3px;
+}
+/* .line2-1{
+border-bottom: 1px solid #D6D6D6;
+width: 940px;
+margin-left: 7px;
+margin-top: 3px;
+} */
+.jobs-menu{
+margin-top: 20px;
+gap: 60px;
+margin-left: 20px;
+color: #3E3E3E;
+font-family: 'Poppins';
+font-size: 14px;
+display: flex;
+}
+.posted-menu{
+gap: 39px;
+display: inline-flex;
+align-items: center;
+}
+.can-menu{
+gap: 29px;
+display: inline-flex;
+align-items: center;
+}
+.filter{
+margin-left: 12px;
+width: 15px;
+}
+.filter-txt{
+font-family: 'Poppins';
+color: #000000;
+font-size: 12px;
+}
+.filter-container1{
+border-radius: 4px;
+display: inline-flex;
+gap: 10px;
+height: 35px;
+margin-top: 13px;
+width: 101px;
+box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+align-items: center;
+}
+.input-search1::placeholder {
+font-size: 12px;
+}
+.view-text{
+margin-top: 15px;
+cursor: pointer;
+font-size: 13px;
+color: #0A66C2;
+text-transform: capitalize;
+font-family: 'Poppins';
+font-weight: 500;
+border-bottom: 1px solid #0A66C2;
+}
+.job-portal1{
+margin-left: 16px;
+margin-top: 26px;
+width: 220px;
+height: 230.46px;
+border-radius: 3px;
+box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+}
+.menu1-job{
+display: flex;
+gap: 17px;
+align-items: center;
+padding: 10px;
+}
+.python-txt{
+font-size: 11px;
+font-family: 'Poppins';
+color: #091316;
+}
+.num-text{
+font-size: 12px;
+font-family: 'Poppins';
+color: #091316;
+}
+.line1-job{
+border: 1px solid #D6D6D6;
+margin-top: 0px;
+width: 202px;
+margin-left: 8px;
+}
+.top-menu{
+text-align: center;
+line-height: 38px;
+}
+.role-text{
+font-family: 'Poppins';
+color: #3E3E3E;
+font-size: 12px;
+margin-top: 12px;
+}
+.div-txt{
+color: #0A66C2;
+width: 50px;
+height: 40px;
+background: #D9E4EF;
+margin-left: 80px;
+}
+.total-app{
+font-family: 'Poppins';
+color: #3E3E3E;
+font-size: 12px;
+margin-bottom: 12px;
+}
+.line3-bot{
+border: 1px solid #D6D6D6;
+margin-top: 0px;
+width: 202px;
+margin-left: 8px;
+}
+.month-text{
+font-family: 'Poppins';
+display: flex;
+margin-top: 15px;
+align-items: center;
+gap: 11px;
+margin-left: 10px;
+font-weight: 400;
+font-size: 11px;
+}
+.iconjob img{
+width:18px;
+}
+.arrowup img{
+width: 15px;
+height: 12px;
+}
+.view-menu{
+margin-top: -105px;
+margin-left: 456px;
+}
+.view-txt{
+width: 135px;
+padding: 15px 15px 15px 15px;
+font-family: 'Poppins';
+border: none;
+font-weight: 500;
+border-radius: 4px;
+color: #000;
+text-transform: uppercase;
+}
+.can-table th {
+background-color: #f2f2f2; 
+color: #333;
+font-weight: 600;
+padding: 10px;
+}
+.can-table tr{
+border-bottom: 1px solid #09131640
+}
+.can-table {
+margin-top: 30px;
+border-radius: 5px;
+font-family: 'Poppins';
+border-bottom: 1px solid #09131640;
+font-size: 13.5px;
+color: #3E3E3E;
+width: 97%;
+margin-left: 20px;
+font-weight: 500;
+border-collapse: collapse;
+}
+
+/* Table data cell styles */
+.can-table td {
+font-weight: 400;
+font-size: 11px;
+text-align: left;
+padding: 18px; 
+}
+
+.cls-active{
+background-color:  #FFF9EC;
+border-radius: 3px;
+width: 35px;
+cursor: not-allowed;
+height: 10px;
+font-family: 'Poppins';
+border: none;
+padding: 8px;
+font-size: 11px;
+color: #F5C961;
+}
+.cls-hired{
+  background-color: #0EAD0B26;
+  border-radius: 3px;
+  width: 35px;
+  padding: 8px;
+  cursor: not-allowed;
+  height: 10px;
+  font-family: 'Poppins';
+  border: none;
+  font-size: 11px;
+  color: #0EAD0B;
+}
+.eye{
+  cursor: pointer;
+}
+.cls-reject{
+  background-color: #E73B3B26;
+  padding: 8px;
+  border-radius: 3px;
+  width: 35px;
+  cursor: not-allowed;
+  height: 10px;
+  font-family: 'Poppins';
+  border: none;
+  font-size: 11px;
+  color: #D12323;
+}
+
+
+/* .top-section {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+} */
+/* 
+.bottom-section {
+  display: flex;
+  margin-left: 15px;
+  justify-content: space-between;
+}
+
+.right-section {
+  flex: 1.2;
+  margin: 0 10px; 
+}
+.left-section{
+flex:2;
+}
+.prof-menu {
+  display: flex;
+  border: 1px solid #D6D6D6;
+}
+.scroll-bar{
+  margin-top: 14px;
+  background: #D9D9D9;
+  width: 925px;
+  height: 10px;
+  margin-left: 15px;
+  border-radius: 5px;
+} */
+
+/* .menu1-prof {
+  border-radius: 4px;
+  color: #091316;
+  width: 40%;
+  border-right: 1px solid #D6D6D6;
+  line-height: 30px;
+  font-family: 'Poppins';
+  text-align: center;
+  font-size: 15px;
+}
+.menu2-prof {
+  border-radius: 4px;
+  color: #091316;
+  width: 99%;
+  border-right: 1px solid #D6D6D6;
+  line-height: 30px;
+  font-family: 'Poppins';
+  text-align: center;
+  font-size: 15px;
+} */
+
+/* .right-side-data {
+flex-grow: 1;
+text-align: center;
+padding-top: 20px;
+}
+
+.profile-boy {
+  padding: 35px 0px 10px 0px;
+}
+
+.icons-menu-bar {
+  margin-top: 24px;
+  display: inline-flex;
+  gap: 20px;
+  font-family: 'Poppins';
+  font-size: 12px;
+  width: 100%;
+  align-items: center;
+  text-align: center;
+  border-top: 1px solid #D6D6D6;
+  color: #0A66C2;
+}
+.calen-menu {
+  margin-top: 10px;
+  margin-left: 30px;
+}
+.clock-menu {
+  margin-top: 10px;
+} */
+.line-cal {
+  width: 1px;
+  height: 85px;
+  background-color: #D6D6D6;
+}
+/* .meet-info {
+  font-size: 20px;
+  font-weight: bold;
+} */
+/* .info-table {
+  width: 100%;
+  border-collapse: collapse;
+  font-family: 'Poppins';
+  font-size: 13px;
+  color: #3E3E3E;
+}
+.info-table td {
+  padding: 10px;
+  border-bottom: 1px solid #D6D6D6;
+}
+.border-grey td {
+  border-bottom: 1px solid #D6D6D6;
+  border-right: 1px solid #D6D6D6;
+} */
+.cal-line{
+  width: 325px;
+  height: 1px;
+  background: #D6D6D6;
+  margin-left: 8px;
+}
+.calendar-container {
+  margin-top: 25px;
+  width: 100%;
+  max-width: 600px;
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 4px 4px 25px 0px rgba(0, 0, 0, 0.15);
+  overflow: hidden;
+}
+.calendar-header {
+  text-align: center;
+  color: #091316;
+  font-family: 'Poppins';
+  border-bottom: 1px solid #D6D6D6;
+  font-size: 12px;
+}
+.calendar {
+  width: 100%;
+  border-collapse: collapse;
+}
+.calendar th, .calendar td {
+  text-align: center;
+  padding: 7px;
+}
+.calendar td{
+  font-weight: 400;
+  font-size: 13px;
+}
+.calendar th {
+  padding: 15px 10px 15px 15px;
+  font-size: 13px;
+  background-color: #fff;
+  color: #0B74AD;
+}
+.calendar .days td {
+  height: 23px;
+  vertical-align: top;
+}
+.calendar .days td .date {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+.details{
+  background: #0A66C2;
+  font-family: 'Poppins';
+  color: #fff;
+  padding: 7px;
+  border: none;
+  border-radius: 5px;
+  width: 75px;
+  height: 35px;
+}
+.details1{
+  font-family: 'Poppins';
+  color: #0A66C2;
+  padding: 7px;
+  border: 1px solid #0A66C2;
+  border-radius: 5px;
+  width: 75px;
+  height: 35px;
+  background: #fff;
+}
+.up-menu{
+  margin-top: 26px;
+  font-family: 'Poppins';
+  font-weight: 400;
+  color: #3E3E3E;
+  line-height: 24px;
+  display: flex;
+  font-size: 11px;
+  text-align: left;
+  justify-content: space-between;
+  align-items: center;
+}
+.up-menu-act{
+  margin-top: 26px;
+  font-family: 'Poppins';
+  font-weight: 400;
+  color: #3E3E3E;
+  line-height: 24px;
+  display: flex;
+  font-size: 11px;
+  text-align: left;
+  gap: 20px;
+  align-items: center;
+}
+.up-menu1{
+  margin-top: 26px;
+  font-family: 'Poppins';
+  font-weight: 400;
+  color: #3E3E3E;
+  justify-content: space-between;
+  line-height: 24px;
+  display: flex;
+  font-size: 11px;
+  text-align: left;
+}
+.view-all-txt{    
+  text-decoration: underline;
+  color: #0A66C2;
+  font-size: 15px;
+  cursor: pointer;
+}
+.up-main-menu{
+  display: flex;
+  gap: 149px;
+  font-family: 'Poppins';
+  font-weight: 500;
+  font-size: 18px;
+  color: #3E3E3E;
+  align-items: center;
+}
+.up-main-menu1{
+  display: flex;
+  gap: 95px;
+  font-family: 'Poppins';
+  font-weight: 500;
+  font-size: 18px;
+  color: #3E3E3E;
+  align-items: center;
+}
+.meet-main-menu{
+  display: flex;
+  justify-content: space-between;
+}
+.dot-icon{
+  margin-right: 22px;
+  margin-top: 23px;
 }
